5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1593_1806.log
== TEST (2019-03-28 10:28:02) 
-- CODE:
from math import *
ndp=float(input("Insira o numero de pessoas "))

p(n)=1-(365)/factorial(365-n)*1/365**n
prob=P(n)*100.00

print(round(prob,2))
-- ERROR:
File "XXXX", line 4
    p(n)=1-(365)/factorial(365-n)*1/365**n
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:28:39) 
-- CODE:
from math import *

n=float(input("Insira o numero de pessoas "))

p(n)=1-(365)/factorial(365-n)*(1/365**n)
prob=P(n)*100.00

print(round(prob,2))
-- ERROR:
File "XXXX", line 5
    p(n)=1-(365)/factorial(365-n)*(1/365**n)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:29:05) 
-- CODE:
from math import *

n=float(input("Insira o numero de pessoas "))

p(n)=1-factorial(365)/factorial(365-n)*(1/365**n)
prob=P(n)*100.00

print(round(prob,2))
-- ERROR:
File "XXXX", line 5
    p(n)=1-factorial(365)/factorial(365-n)*(1/365**n)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:29:25) 
-- CODE:
from math import *

n=float(input("Insira o numero de pessoas "))

p(n)=1-(factorial(365)/factorial(365-n))*(1/365**n)
prob=P(n)*100.00

print(round(prob,2))
-- ERROR:
File "XXXX", line 5
    p(n)=1-(factorial(365)/factorial(365-n))*(1/365**n)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:30:53) 
-- CODE:
from math import *

n=float(input("Insira o numero de pessoas "))

p(n)=1-(factorial(365)/factorial(365-n))*(1/365**n)
prob=P(n)*100.00

print(round(prob,2))
-- ERROR:
File "XXXX", line 5
    p(n)=1-(factorial(365)/factorial(365-n))*(1/365**n)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:31:07) 
-- CODE:
from math import *

n=float(input("Insira o numero de pessoas "))

p=1-(factorial(365)/factorial(365-n))*(1/365**n)
prob=P*100.00

print(round(prob,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prob=P*100.00
NameError: name 'P' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:31:25) 
-- CODE:
from math import *

n=float(input("Insira o numero de pessoas "))

p=1-(factorial(365)/factorial(365-n))*(1/365**n)
prob=p*100.00

print(round(prob,2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:31:31) 
-- CODE:
from math import *

n=float(input("Insira o numero de pessoas "))

p=1-(factorial(365)/factorial(365-n))*(1/365**n)
prob=p*100.00

print(round(prob,2))
-- EXECUTION TIME:
0.228791
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
